fix(styles/article): make code whitespace-pre
If it wraps, the block may have empty parts in right-bottom, and
text-center will make the last line look weird.

P.S. inline-block is to fix the line height problem, and text-center is
     for when there is only a single character.

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -108,7 +108,9 @@
   }
 
   :not(pre) > code {
-    @apply inline-block bg-area b-1 b-gray-3 dark:b-gray-11 rd-1 p-0.5 m-0.5 text-3.5 min-w-6 text-center;
+    @apply inline-block whitespace-pre;
+    @apply bg-area b-1 b-gray-3 dark:b-gray-11 rd-1 p-0.5 m-0.5;
+    @apply text-3.5 min-w-6 text-center;
   }
 
   table {
